--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 django==2.0.7
 djangorestframework==3.8.2
+djangorestframework-xml==1.3.0
 mysqlclient==1.3.13
 python-memcached=1.59
 requests=2.19.1
