--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django==2.0.7
 djangorestframework==3.8.2
 djangorestframework-xml==1.3.0
 mysqlclient==1.3.13
-python-memcached=1.59
-requests=2.19.1
-Pillow=5.2.0
-pyquery=1.4.0
+python-memcached==1.59
+requests==2.19.1
+Pillow==5.2.0
+pyquery==1.4.0
